--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -29,7 +29,7 @@
 
 .login-form-modal{
   font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,"Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
-  padding: 18px;
+  padding: 1px 18px 18px 18px;
   /* width: 360px; */
   /* height: 395px; */
   background: white;
@@ -45,9 +45,19 @@
   font-size: 26px;
   font-weight: 500 !important;
   line-height: 1.4;
-  padding-bottom: 12px;
+  /* padding-bottom: 12px; */
   /* display: block; */
   margin: 0;
+}
+
+.modal-sign-in-h1 > p{
+  font-size: 14px;
+  font-weight: 300 !important;
+  line-height: 1.6;
+  padding-bottom: 13px;
+  /* display: block; */
+  margin: 0;
+
 }
 
 .modal-email-address-title, .modal-email-password-title{
