complete Listing Index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -121,7 +121,8 @@
  }
 
  #global-header{
-   font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,"Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
+   font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,
+   "Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
  }
 
 .header-search-button-wrapper .btn-primary{
@@ -188,7 +189,8 @@ ul, menu, dir {
 .account-nav li{
   /* color: blue; */
 
-  font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,"Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
+  font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,
+  "Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
   font-size: 14px;
   line-height: 16px;
   line-height: 1.4;
