--- a/app/assets/stylesheets/modal-profile-dropdown.scss
+++ b/app/assets/stylesheets/modal-profile-dropdown.scss
@@ -29,7 +29,8 @@
 }
 
 .header-modal-profile{
-  font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,"Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
+  font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,
+  "Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
   /* padding: 1px 18px 18px 18px; */
   /* width: 360px; */
   /* height: 395px; */
