Finish question consultation

--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -1,5 +1,6 @@
 .listing-show-content-wrapper {
   font-family: "Graphik Webfont", -apple-system, system-ui, Roboto, "Droid Sans", "Segoe UI", Helvetica, Arial, sans-serif;
+  margin-bottom: 40px;
 }
 
 .listing-show-author-buttons{
