--- a/app/assets/stylesheets/listing_form.css
+++ b/app/assets/stylesheets/listing_form.css
@@ -21,15 +21,20 @@
   border: #E1E3DF 1px solid;
   box-sizing: border-box;
   margin: -10px;
+  grid-template-rows: 1fr 5fr;
 
 }
 
-.create-listing-photo-inner{
+.create-listing-photo-inner, .create-listing-photo-intake, .create-listing-photo p {
   align-self: center;
   justify-self: center;
 }
 
-.create-listing-title-input, .create-listing-overview-textarea, .create-listing-description-input, .create-list-price-input {
+.create-listing-photo-inner{
+  font-size: 20px;
+}
+
+.create-listing-title-input, .create-listing-overview-textarea, .create-listing-description-input, .create-list-price-input, .create-listing-merchant-input {
   width: 100%;
   border: 1px solid #CFCBC8;
   background: #f9f9f8;
@@ -49,7 +54,7 @@
 
 }
 
-.create-listing-title-input{
+.create-listing-title-input, .create-listing-merchant-input{
   height: 34px;
 }
 
