--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -59,6 +59,18 @@
   font-size: 12px;
   line-height: 19.2px;
   color: rgb(89,89,89);
+  text-decoration: none;
+
+}
+
+.listing-item-author >.listing-item-link{
+  text-decoration: none;
+  color: black;
+}
+
+.listing-item-author >.listing-item-link:hover{
+  text-decoration: underline;
+
 }
 
 .index-wrapper .listing-item-price {
