--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -61,8 +61,8 @@
 
 .listing-show-body-wrapper .listing-image {
   min-height: 0;
-  max-height: 760px;
-  overflow: hidden;
+  /* max-height: 760px; */
+  /* overflow: hidden; */
 }
 
 
