Change register from a Link to a button

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -380,6 +380,15 @@ li {
   top: 0;
 }
 
+.header-nav-register{
+  border: none;
+}
+
+.header-nav-register:hover{
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 
 // [class*="icon-"] {
 //   border: 5px solid red;
