--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -41,6 +41,9 @@
 
   /* transform: translate(-50%, -50%); */
 }
+.modal-sign-in-h1 {
+  padding-top: 5px;
+}
 
 .modal-sign-in-h1 > div{
   font-size: 26px;
