--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,28 +35,30 @@
    position: relative;
    height: 80px;
    float: left;
-   width: 113px;
+   width: 200px;
    margin-right: 20px;
    color: #f45800;
    box-sizing: border-box;
    display: block;
-   font-weight: 525;
+  //  font-weight: 525;
+   font-weight: 300;
+
  }
 
  #craftsy-logo a{
    background: none;
    display: block;
    position: absolute;
-   top: 15%;
+   top: 23%;
    width: 100%;
    height: 100%;
    color: #f45800;
    /* margin-top: 2px; */
    text-decoration: none;
-   font-size: 40px;
    overflow: hidden;
    font-family: "Baskerville Old Face";
    padding: 0;
+  font-size: 34px;
  }
 
  .header-search-div-wrapper{
