--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -69,7 +69,7 @@
  .header-search-bar-outer{
    position: relative;
    float: left;
-   width: 300px;
+   width: 35%;
    display: block;
    text-align: left;
    font-size: 14px;
