Shorten name for now

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,7 +35,7 @@
    position: relative;
    height: 80px;
    float: left;
-   width: 200px;
+   width: 7%;
    margin-right: 20px;
    color: #f45800;
    box-sizing: border-box;
@@ -75,6 +75,7 @@
    font-size: 14px;
    line-height: 1.4;
  }
+
 
  .header-search-nav-form{
    position: relative;
