--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -32,10 +32,10 @@
 }
 
  #craftsy-logo {
-  //  position: relative;
+   position: relative;
    height: 80px;
    float: left;
-   width: 7%;
+   width:7%;
    margin-right: 20px;
    color: #f45800;
    box-sizing: border-box;
