--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -9,6 +9,12 @@
 
 .categories-wrapper > li {
   margin: 9px 12px 15px 12px;
+  /* box-sizing: border-box; */
+}
+
+.categories-wrapper > li:hover {
+  border-bottom: 3px solid #F56400;
+  margin-bottom: -3px;
 }
 
 
