--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -7,14 +7,15 @@
 }
 
 .slider-image{
-    overflow: hidden
+    overflow: hidden;
+    height: 70vh;
 }
 
 .nextArrow{
     position: absolute;
     z-index: 2;
     right: 0;
-    top: 20%;
+    top: 36%;
     opacity: 0.7;
     background-color: #757575;
 }
@@ -23,8 +24,23 @@
     position: absolute; 
     z-index: 2; 
     left: 0; 
-    top: 20%;
+    top: 36%;
     opacity: 0.7;
     background-color: #757575;
 }
 
+.slider-thumbnails-wrapper{
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 3px;
+
+}
+
+.slider-thumbnails{
+    height: 50px;
+    width: 50px;
+}
+
+.nextArrow, .backArrow, .slider-thumbnails:hover{
+    cursor: pointer;
+}
