--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -25,6 +25,10 @@
   /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
 }
 
+.listing-header-seller-name{
+  margin-bottom: 15px;
+}
+
 .listing-header-seller-name a{
   font-size: 20px;
   font-weight: 500;
