Set max width of page and thumbnail distance'

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -126,6 +126,7 @@
  #global-header{
    font-family: "Graphik Webfont",-apple-system,BlinkMacSystemFont,
    "Roboto","Droid Sans","Segoe UI","Helvetica",Arial,sans-serif;
+   max-width: 1328px;
  }
 
 
