--- a/app/assets/stylesheets/listing_show.css
+++ b/app/assets/stylesheets/listing_show.css
@@ -70,7 +70,7 @@
   margin-top: 35px;
   padding: 0 40px 0 40px;
   grid-column-gap: 24px;
-
+  max-width: 1272px;
 }
 
 .listing-show-body-wrapper .listing-image {
