--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -38,6 +38,12 @@
     object-fit: contain;
     /* object-position: 50% 0%; */
     max-height: 430px;
+    cursor: zoom-in;
+}
+
+.slider-wrapper{
+    margin-bottom: 5px;
+
 }
 
 .slider-thumbnails-wrapper{
@@ -45,18 +51,22 @@
     /* grid-template-columns: repeat(999, 1fr); */
     /* grid-template-columns: repeat(50px, minmax(50px, 1fr)); */
     /* grid-gap: 3px; */
-    display: relative;
+    position: relative;
 
 }
 
 .slider-thumbnails{
-    height: 50px;
-    width: 50px;
-    display: absolute;
+    height: 48px;
+    width: 48px;
     margin-left: 5px;
-    
+    opacity: 0.7;
 }
 
-.nextArrow, .backArrow, .slider-thumbnails:hover{
+.nextArrow:hover, .backArrow:hover, .slider-thumbnails:hover{
     cursor: pointer;
+    opacity: 1.0;
+}
+
+.slider-thumbnail-inner-wrapper{
+    display: flex;
 }
