--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -129,15 +129,15 @@
 
 .modal-child-slider {
   position: absolute;
-  top: 30px; /* position */
-  left: 100px;
   /* transform: translate(160%, 55%); */
   /* transform: translate(50%, 55%); */
-  width: 90vw;
-  height: 90vh;
+  width: 100vw;
+  height: 100vh;
+  top: 3%;
+  left: 3%;
   background: white;
-  max-height: 900px;
-  max-width: 1200px;
+  max-height: 90%;
+  max-width: 90%;
 
   /* margin-top: -200px;
   margin-left: -180px; */
@@ -147,6 +147,11 @@
   margin-top: 0px;
   margin-left: 0px;
   /* border: 1px solid #000; */
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+
 }
 
 .far.fa-window-close{
