--- a/app/assets/stylesheets/slider.css
+++ b/app/assets/stylesheets/slider.css
@@ -52,12 +52,12 @@
     /* grid-template-columns: repeat(50px, minmax(50px, 1fr)); */
     /* grid-gap: 3px; */
     position: relative;
-
+    height: 100%;
 }
 
 .slider-thumbnails{
-    height: 48px;
-    width: 48px;
+    height: 53px;
+    width: 53px;
     margin-left: 5px;
     opacity: 0.7;
 }
