--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -31,15 +31,21 @@
   height: 100%;
 }
 
+.listing-item-image{
+  border-radius: 2px; 
+  transition: box-shadow .3s;
+}
+
+.listing-item-image:hover{
+  box-shadow: 0 0 15px gray; 
+}
 
 .index-wrapper > li{
-
   list-style: none;
   padding: 9px;
   /* Row below is for minimum height */
   grid-auto-rows: minmax(100px, auto);
   max-height: 294px;
-
   text-decoration: none;
 }
 
@@ -49,7 +55,6 @@
   overflow-y: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-
 }
 
 
