set thumbnail to center

--- a/app/assets/stylesheets/listing_index.css
+++ b/app/assets/stylesheets/listing_index.css
@@ -27,8 +27,22 @@
   max-height: 30%;
 } */
 
+.listing-item-image {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
+
 .listing-item-image > a > img{
-  height: auto;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
 }
 
 .listing-item-image{
