--- a/app/assets/stylesheets/modal-profile-dropdown.scss
+++ b/app/assets/stylesheets/modal-profile-dropdown.scss
@@ -81,7 +81,7 @@
 
 .header-button{
   display: inline-block;
-  width: 320px !important;
+  width: 100%;
   text-decoration: none;
   cursor: pointer;
   font-size: 14px;
