refactor modal slider complete

--- a/app/assets/stylesheets/modal-profile-dropdown.scss
+++ b/app/assets/stylesheets/modal-profile-dropdown.scss
@@ -11,12 +11,12 @@
 .modal-child-profile-dropdown {
   position: absolute;
   // top: 55vh; /* position */
-  top: 63.5vh; /* position */
+  // top: 63.5vh; /* position */
   left: 80vw ;
   /* transform: translate(160%, 55%); */
   /* transform: translate(50%, 55%); */
   width: 360px;
-  height: 820px;
+  // height: 820px;
 
   margin-top: -400px;
   margin-left: -180px;
