--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -31,7 +31,6 @@
 #craftsy-logo {
   position: relative;
   float: left;
-  width: 7%;
   margin-right: 20px;
   color: #f45800;
   box-sizing: border-box;
@@ -44,6 +43,8 @@
   height: 80px;
   background-repeat: no-repeat;
   top: -14px;
+  margin-left: -20px;
+  margin-right: 10px;
 }
 
 #craftsy-logo a {
